--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,6 @@
   "compilerOptions": {
     "incremental": true,
     "target": "es2020",
-    "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "module": "commonjs",
     "outDir": "./dist",
@@ -10,7 +9,8 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "strictNullChecks": false,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "experimentalDecorators": true
     // "baseUrl": "./src"
   },
   "include": ["src/**/*.ts"]
