feat: implement tests and methods from create and update products

--- a/.swcrc
+++ b/.swcrc
@@ -4,7 +4,7 @@
       "syntax": "typescript",
       "decorators": true
     },
-    "tramsform": {
+    "transform": {
       "legacyDecorator": true,
       "decoratorMetadata": true
     }
